# Enchanting-Preserver

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  setup.bat  vcpkg.json
cmake/: Version.h.in
cmake/lib/: autoAddSources.cmake
include/: EnchantMenu.h  Hooks.h  Log.h  PCH.h  Settings.h
src/: EnchantMenu.cpp  Hooks.cpp  Settings.cpp  main.cpp
